--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,4 @@
-*{
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
-}
+/* landing page */
 
 /* header styling */
 
@@ -18,6 +14,7 @@ header::before{
     bottom: 0;
     right: 0;
     opacity: 0.25;
+    height: 881px;
 
 }
 
@@ -37,3 +34,132 @@ header .logo{
     margin-left: 20px;
 
 }
+
+
+/* mission section */
+
+section.section-a{
+    height: 600px;
+    padding-bottom: 30px;
+}
+
+.section-a .grid-30{
+    background-color: #FE0000;
+    height: 650px;
+    background-size: cover;
+    margin-left: -75px;
+    width: 424px;
+    margin-top: 40px;
+}
+
+
+.section-a .mission{
+    position: relative;
+    top: 150px;
+    margin-left: -20px;
+    padding: 15px 37px;
+    color: #ffffff;
+    font-family: "Poppins", sans-serif;
+    text-align: center;
+    
+
+}
+
+.mission h1{
+    font-style: normal;
+    font-weight: 700;
+    font-size: 25px;
+    line-height: 54px;
+    text-align: center;
+}
+
+.mission hr{
+    width: 155px;
+    height: 0px;
+    left: 222px;
+    top: 610px;
+    text-align: center;
+}
+
+.mission p{
+    font-weight: 500;
+    font-size: 11px;
+    line-height: 24px;
+    text-align: center;
+}
+
+/* grid-70 form section */
+
+.section-a .grid-70{
+    margin-top: 220px;
+}
+
+
+.section-a .form{
+    position: relative;
+    margin-left: 60px;
+    
+    
+}
+
+input {
+  width: 46%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  border: none;
+  background-color: #FE0000;
+  margin-right: -10px;
+  padding-left: 20px;
+  color: #ffffff;
+}
+
+input[ placeholder=username ] {
+    color: #ffffff;
+}
+
+.form .fa-solid{
+    background-color: #FE0000;
+    height: 20px;
+    width: 30px;
+    padding: 10px;
+    text-align: center;
+}
+
+.form button{
+    width: 53%;
+    background-color: #FE0000;
+    color: rgb(117, 113, 113);
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+}
+
+.form button:hover{
+    background-color: #680e0e;
+    color: #ffffff;
+}
+
+.form a{
+    color: black;
+    text-decoration: none;
+}
+
+.form span{
+    margin-left: 249px;
+}
+
+.form a:hover{
+    color: #680e0e;
+}
+
+.sign-up button a{
+    color: #ffffff;
+}
+
+.signup a:hover{
+    color: #ffffff;
+}
+
+
