--- a/css/admin.css
+++ b/css/admin.css
@@ -52,3 +52,59 @@ header .healine p{
     text-align: center;
     padding: 83px 20px 20px 20px;
 }
+
+.dropbtn {
+  background-color: #FE0000;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+  margin: 112px -233px 20px 583px
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {background-color: #b3adad}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown:hover .dropbtn {
+  background-color: #7d6363;
+}
+
+.dropdown .fa-solid{
+  margin-left: 10px;
+  background-color: #7d6363;
+  padding: 16px;
+  margin-left: -4px;
+  margin-top: 10px;
+  cursor: pointer;
+
+}
+
+.dropdown .fa-caret-down{
+  /* font-size: 30px; */
+}
+
