--- a/css/style.css
+++ b/css/style.css
@@ -129,17 +129,17 @@ input[ placeholder=username ] {
 .form button{
     width: 53%;
     background-color: #FE0000;
-    color: rgb(117, 113, 113);
+    color: #ffffff;
     padding: 14px 20px;
     margin: 8px 0;
     border: none;
     cursor: pointer;
 }
 
-.form button:hover{
+/* .form button:hover{
     background-color: #680e0e;
     color: #ffffff;
-}
+} */
 
 .form a{
     color: black;
@@ -159,6 +159,10 @@ input[ placeholder=username ] {
 }
 
 .signup a:hover{
+    color: #ffffff;
+}
+
+::placeholder{
     color: #ffffff;
 }
 
