--- a/css/record.css
+++ b/css/record.css
@@ -124,7 +124,7 @@ input[type=text] {
     margin-left: 88px;
 }
 .forms form{
-    
+    margin-top: 47px;
 }
 
 .forms .name {
@@ -157,5 +157,33 @@ input[type=text] {
 ::placeholder{
     color: #fff;
 }
+
+
+.section-a{
+    /* border: #770d0d solid 2px; */
+    margin-top: 20px;
+    height: 200px;
+}
+
+.section-a .grid-30{
+    background-color: #FE0000;
+    height: 170px
+    
+    
+}
+
+.grid-30 .radio-forms{
+    margin-top: 20px;
+    color: #fff;
+    
+}
+
+.section-a .grid-70{
+    background-color: #D9D9D9;
+    width: 580px;
+    height: 170px;
+}
+
+
 
 
