--- a/css/admin.css
+++ b/css/admin.css
@@ -31,7 +31,7 @@ header::before{
 
 
 .nav-bars{
-    border: 2px #FE0000 solid;
+    border: 2px #691414 solid;
     margin-top: 43px;
     margin-left: 30px;
     margin-right: 30px;
@@ -208,5 +208,83 @@ header .finance-head{
 ::placeholder{
     color: #fff;
 }
+
+
+.list-item{
+    margin-top: 20px;
+    margin-left: 86px;
+    display: block;
+}
+
+.list-item button{
+    width: 15%;
+    background-color: #FE0000;
+    color: white;
+    padding: 7px 5px;
+    /* margin: 8px 0; */
+    border: none;
+    /* border-radius: 4px; */
+    cursor: pointer;
+    
+}
+
+.list-item button a{
+    text-decoration: none;
+    color: #fff;
+    font-family: "poppins" sans-serif;
+
+}
+.list-item ul{
+    list-style-type: none;
+    display: inline;
+
+}
+.list-item li{
+    display: inline;
+}
+
+.list-item li a{
+    /* display: block; */
+    color: black;
+    text-align: center;
+    padding: 16px;
+    text-decoration: none;
+    margin-left: 20px;
+    
+}
+
+.list-item li a:hover{
+    border-bottom: blue 2px solid;
+}
+
+
+/* section a */
+
+
+.section-a{
+    /* border: #770d0d solid 2px; */
+    margin-top: 20px;
+    height: 200px;
+}
+
+.section-a .grid-30{
+    background-color: #FE0000;
+    height: 170px
+    
+    
+}
+
+.grid-30 .radio-forms{
+    margin-top: 20px;
+    color: #fff;
+    
+}
+
+.section-a .grid-70{
+    background-color: #D9D9D9;
+    width: 580px;
+    height: 170px;
+}
+
 
 
