--- a/css/admin.css
+++ b/css/admin.css
@@ -5,7 +5,7 @@
 
 
 body{
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 header{
     height: 150px;
@@ -121,6 +121,31 @@ input[type=text] {
     color: #fff;
     
 }
+
+.sec-rol{
+    margin-top: 45px;
+    margin-left: 72px;
+}
+
+.sec-rol .req2 th{
+    border: 1px solid #FE0000;
+    padding: 10px 55px 9px 55px;
+    width: 130px;
+    
+}
+
+.req2 tr th a{
+    text-decoration: none;
+    color: black;
+    font-weight: 500;
+}
+.req2 th:hover{
+    background-color: #FE0000;
+}
+.req2 tr th a:hover{
+    color: #fff;
+}
+
 
 
 /* finance statement page styling */
@@ -261,31 +286,50 @@ header .finance-head{
 /* section a */
 
 
-.section-a{
+.section-b{
     /* border: #770d0d solid 2px; */
-    margin-top: 20px;
-    height: 200px;
+    margin-top: 0px;
+    height: 800px;
+    margin-right: 8px;
+    margin-left: 1px;
+    
+    
+
 }
 
-.section-a .grid-30{
+.section-b .grid-20{
     background-color: #FE0000;
-    height: 170px
-    
-    
+    height: 310px    
 }
 
-.grid-30 .radio-forms{
+.grid-20 .forms2{
     margin-top: 20px;
     color: #fff;
     /* cursor: pointer; */
     
 }
 
-.section-a .grid-70{
-    background-color: #D9D9D9;
-    width: 580px;
-    height: 170px;
+.section-b .grid-80{
+    margin-left: -3em;
+    
+
 }
+
+.section-b .grid-80 table{
+    width: 1005px;
+    height: 310px;
+
+    
+    
+}
+
+
+.section-b .grid-80 table tr{
+    border: 1px solid #FE0000;
+    border-collapse: collapse;
+    /* padding: 30px; */
+
+  }
 
 
 
