--- a/css/admin.css
+++ b/css/admin.css
@@ -284,7 +284,33 @@ header .finance-head{
 
 
 /* section a */
+.section-a{
+    /* border: #770d0d solid 2px; */
+    margin-top: 20px;
+    height: 200px;
+}
 
+.section-a .grid-30{
+    background-color: #FE0000;
+    height: 170px
+    
+    
+}
+
+.grid-30 .radio-forms{
+    margin-top: 20px;
+    color: #fff;
+    
+}
+
+.section-a .grid-70{
+    background-color: #D9D9D9;
+    width: 580px;
+    height: 170px;
+}
+
+
+/* section b */
 
 .section-b{
     /* border: #770d0d solid 2px; */
